--- a/src/elec/electUi.fxml
+++ b/src/elec/electUi.fxml
@@ -185,7 +185,7 @@
                   <Insets bottom="45.0" />
                </GridPane.margin>
             </Button>
-            <Button fx:id="oneOneBut" mnemonicParsing="false" onAction="#oneOneClick" prefWidth="100.0" text="Buy" GridPane.rowIndex="1">
+            <Button fx:id="oneOneBut" mnemonicParsing="false" onAction="#oneOneClick" prefWidth="100.0" text="10,000 mAH" GridPane.rowIndex="1">
                <GridPane.margin>
                   <Insets bottom="45.0" />
                </GridPane.margin>
@@ -200,7 +200,7 @@
                   <Insets bottom="45.0" />
                </GridPane.margin>
             </Button>
-            <Button fx:id="zeroFourBut" mnemonicParsing="false" onAction="#zeroFourClick" prefWidth="100.0" text="1 mAH" GridPane.columnIndex="3">
+            <Button fx:id="zeroFourBut" mnemonicParsing="false" onAction="#zeroFourClick" prefWidth="100.0" text="70 mAH" GridPane.columnIndex="3">
                <GridPane.margin>
                   <Insets bottom="45.0" />
                </GridPane.margin>
@@ -339,7 +339,13 @@
                   <Insets right="6.0" top="3.0" />
                </GridPane.margin>
             </Button>
-            <Label fx:id="mAHPerSec" alignment="TOP_CENTER" prefHeight="17.0" prefWidth="316.0" text="0 mAH/s" GridPane.columnIndex="7" GridPane.columnSpan="3" GridPane.rowIndex="3" GridPane.valignment="TOP" />
+            <Label fx:id="mAHPerSec" alignment="TOP_CENTER" prefHeight="17.0" prefWidth="316.0" text="0 mAH/s" GridPane.columnIndex="7" GridPane.columnSpan="3" GridPane.rowIndex="3" GridPane.valignment="TOP">
+               <GridPane.margin>
+                  <Insets />
+               </GridPane.margin>
+               <padding>
+                  <Insets left="30.0" />
+               </padding></Label>
          </children>
          <GridPane.margin>
             <Insets />
@@ -358,9 +364,9 @@
             <Insets left="25.0" />
          </GridPane.margin></Button>
        <Label fx:id="energyMeter" alignment="CENTER" contentDisplay="CENTER" prefHeight="17.0" prefWidth="370.0" text="0 mAH" GridPane.rowIndex="1" />
-      <Button fx:id="clearGraphData" mnemonicParsing="false" onAction="#clearGraphDataClick" prefHeight="25.0" prefWidth="80.0" text="Clear data" GridPane.columnIndex="1" GridPane.halignment="RIGHT" GridPane.rowIndex="1" GridPane.valignment="CENTER">
+      <Button fx:id="clearGraphData" mnemonicParsing="false" onAction="#clearGraphDataClick" prefHeight="25.0" prefWidth="128.0" text="Clear graph data" GridPane.columnIndex="1" GridPane.halignment="RIGHT" GridPane.rowIndex="1" GridPane.valignment="CENTER">
          <GridPane.margin>
-            <Insets right="220.0" />
+            <Insets right="195.0" />
          </GridPane.margin>
       </Button>
    </children>
